--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   qr_code_scanner: ^0.6.0
   url_launcher: ^6.0.10
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
