--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+   
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.13.1
   qr_code_scanner: ^0.6.0
   url_launcher: ^6.0.10
   http: ^0.13.3
+  firebase_auth: ^4.15.0
 
 dev_dependencies:
   flutter_test:
